syntax = "proto3";

import "packet_type.proto";

package packet;

message Vector3
{
  float x = 1;
  float y = 2;
  float z = 3;
}

message RoomUser
{
  int64 network_id = 1;
  Vector3 position = 2;
  string name = 3;
}

message ErrorAck
{
  Type type = 1;
}

message Connect
{
  int64 network_id = 1;
}

message Disconnect
{
  int64 network_id = 1;
}

message LoginReq
{
  int64 network_id = 1;
  string name = 2;
}

message LoginAck
{
  int64 network_id = 1;
  string name = 2;
  repeated RoomUser users = 3;
}

message EnterNewUserAck
{
  string new_user_name = 1;
  RoomUser new_user = 2;
}

message MoveReq
{
  Vector3 position = 1;
}

message MoveAck
{
  int64 network_id = 1;
  Vector3 position = 2;
}